--- a/local-only/deploy.html
+++ b/local-only/deploy.html
@@ -12,7 +12,7 @@
 </a>
 
 <h2>aiAgentTrigger</h2>
-<a href="https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fjdarring%2Fazure-ai-agents-for-marketo%2Fmain%2FaiAgentTrigger%2Ftemplate.json" target="_blank">
+<a href="https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fjdarring%2Fazure-ai-agents-for-marketo%2Fmain%2Flogic-app-aiAgentTrigger%2Ftemplate.json" target="_blank">
   <img src="https://aka.ms/deploytoazurebutton" alt="Deploy to Azure" />
 </a>
 </body>
