requestMarketoCampaign Template connections

--- a/local-only/deploy.html
+++ b/local-only/deploy.html
@@ -20,6 +20,11 @@
 <a href="https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fjdarring%2Fazure-ai-agents-for-marketo%2Fmain%2Flogic-app-enrichLeadData%2Ftemplate.json" target="_blank">
   <img src="https://aka.ms/deploytoazurebutton" alt="Deploy to Azure" />
 </a>
+<hr/>
+<h2>requestMarketoCampaign</h2>
+<a href="https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fraw.githubusercontent.com%2Fjdarring%2Fazure-ai-agents-for-marketo%2Fmain%2Flogic-app-requestCampaign%2Ftemplate.json" target="_blank">
+  <img src="https://aka.ms/deploytoazurebutton" alt="Deploy to Azure" />
+</a>
 </body>
 
 </html>
